fix(files): adjust layout for better ux (#4100)
* fix(files): adjust layout for better ux

* fix(files): prevent layout shift bug in empty dir

--- a/components/views/files/mobileList/mobileList.less
+++ b/components/views/files/mobileList/mobileList.less
@@ -3,21 +3,27 @@
   flex-direction: column;
   gap: @normal-spacing;
 
-  .sort-container {
+  .file-controls {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     gap: @light-spacing;
 
-    .sort-button {
+    .sort-container {
       display: flex;
       align-items: center;
-    }
+      gap: @light-spacing;
 
-    .sort-selection {
-      display: flex;
-      align-items: center;
-      align-self: flex-end;
+      .sort-button {
+        display: flex;
+        align-items: center;
+      }
+
+      .sort-selection {
+        display: flex;
+        align-items: center;
+        align-self: flex-end;
+      }
     }
   }
 
